tests/transpiler/x/hs/left_join_multi.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/left_join_multi.hs:37:31: error:
    • Couldn't match type ‘Int’ with ‘[Char]’
        arising from selecting the field ‘id’
    • In the ‘orderId’ field of a record
      In the expression:
        GenType4 {orderId = o.id, name = c.name, item = i}
      In the expression:
        [GenType4 {orderId = o.id, name = c.name, item = i} |
           o <- orders,
           c <- customers,
           i <- items,
           o.customerId == c.id && o.id == i.orderId]
   |
37 | result = [GenType4 {orderId = o.id, name = c.name, item = i} | o <- orders, c <- customers, i <- items, o.customerId == c.id && o.id == i.orderId]
   |                               ^^^^

/workspace/mochi/tests/transpiler/x/hs/left_join_multi.hs:37:59: error:
    • Couldn't match type ‘GenType3’ with ‘[Char]’
      Expected: String
        Actual: GenType3
    • In the ‘item’ field of a record
      In the expression:
        GenType4 {orderId = o.id, name = c.name, item = i}
      In the expression:
        [GenType4 {orderId = o.id, name = c.name, item = i} |
           o <- orders,
           c <- customers,
           i <- items,
           o.customerId == c.id && o.id == i.orderId]
   |
37 | result = [GenType4 {orderId = o.id, name = c.name, item = i} | o <- orders, c <- customers, i <- items, o.customerId == c.id && o.id == i.orderId]
   |                                                           ^

/workspace/mochi/tests/transpiler/x/hs/left_join_multi.hs:43:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block:
        putStrLn show r.orderId ++ " " ++ show r.name ++ " " ++ show r.item
      In the expression:
        do putStrLn show r.orderId
             ++ " " ++ show r.name ++ " " ++ show r.item
      In the first argument of ‘mapM_’, namely
        ‘(\ r
            -> do putStrLn show r.orderId
                    ++ " " ++ show r.name ++ " " ++ show r.item)’
   |
43 |         putStrLn show r.orderId ++ " " ++ show r.name ++ " " ++ show r.item
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/left_join_multi.hs:43:18: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely ‘putStrLn show r.orderId’
      In a stmt of a 'do' block:
        putStrLn show r.orderId ++ " " ++ show r.name ++ " " ++ show r.item
   |
43 |         putStrLn show r.orderId ++ " " ++ show r.name ++ " " ++ show r.item
   |                  ^^^^
